Bug: Ammended z-index issue

--- a/src/app/components/checkout/checkout.component.scss
+++ b/src/app/components/checkout/checkout.component.scss
@@ -55,7 +55,7 @@ $hellenicblue: rgb(0, 140, 255);
                                 outline: none;
                                 border: 1px solid $hellenicblue;
                                 outline: 1px solid $hellenicblue;
-                                z-index: 999;
+                                z-index: 2;
                             }
                         }
                         .error-input {
